# cels-ncurses

./: CMakeLists.txt  README.md  compile_commands.json
.cache/clangd/index/: tui_color.h.07A97A920DC99983.idx  tui_draw.h.AB119A83332CF805.idx  tui_draw_context.h.FF353B915790BE11.idx  tui_engine.h.5FC18CBE0449E08A.idx  tui_frame.h.2738BFC90277A8EC.idx  tui_input.h.E06A0350845D54DD.idx  tui_layer.h.384B480A61DE0F77.idx  tui_scissor.h.A33FD9A9CFEF3A71.idx  tui_types.h.BC83E925F954370E.idx  tui_window.h.7B65DD3BAA34EAF5.idx
.planning/: MILESTONES.md  PROJECT.md  REQUIREMENTS.md  ROADMAP.md  STATE.md
.planning/codebase/: ARCHITECTURE.md  CONCERNS.md  CONVENTIONS.md  INTEGRATIONS.md  STACK.md  STRUCTURE.md  TESTING.md
.planning/milestones/: v1.0-REQUIREMENTS.md  v1.0-ROADMAP.md
.planning/phases/00-cels-module-registration/: 00-01-PLAN.md  00-01-SUMMARY.md  00-02-PLAN.md  00-02-SUMMARY.md  00-03-PLAN.md  00-03-SUMMARY.md  00-CONTEXT.md  00-RESEARCH.md
.planning/phases/01-foundation/: 01-01-PLAN.md  01-01-SUMMARY.md  01-02-PLAN.md  01-02-SUMMARY.md  01-03-PLAN.md  01-03-SUMMARY.md  01-CONTEXT.md  01-RESEARCH.md  01-VERIFICATION.md
.planning/phases/01-module-boundary/: 01-01-PLAN.md  01-01-SUMMARY.md  01-02-PLAN.md  01-02-SUMMARY.md  01-03-PLAN.md  01-03-SUMMARY.md  01-CONTEXT.md  01-RESEARCH.md
.planning/phases/01.1-cels-api-purge/: 01.1-01-PLAN.md  01.1-01-SUMMARY.md  01.1-02-PLAN.md  01.1-02-SUMMARY.md  01.1-RESEARCH.md  01.1-VERIFICATION.md
.planning/phases/01.2-window-lifecycle-rewrite/: 01.2-01-PLAN.md  01.2-01-SUMMARY.md  01.2-02-PLAN.md  01.2-02-SUMMARY.md  01.2-RESEARCH.md  01.2-VERIFICATION.md
.planning/phases/02-drawing-primitives/: 02-01-PLAN.md  02-01-SUMMARY.md  02-02-PLAN.md  02-02-SUMMARY.md  02-03-PLAN.md  02-03-SUMMARY.md  02-04-PLAN.md  02-04-SUMMARY.md  02-05-PLAN.md  02-05-SUMMARY.md  02-RESEARCH.md  02-VERIFICATION.md
.planning/phases/03-input-system/: 03-01-PLAN.md  03-01-SUMMARY.md  03-02-PLAN.md  03-02-SUMMARY.md  03-RESEARCH.md  03-VERIFICATION.md
.planning/phases/03-layer-system/: 03-01-PLAN.md  03-01-SUMMARY.md  03-02-PLAN.md  03-02-SUMMARY.md  03-03-PLAN.md  03-03-SUMMARY.md  03-RESEARCH.md  03-VERIFICATION.md
.planning/phases/04-frame-pipeline/: 04-01-PLAN.md  04-01-SUMMARY.md  04-02-PLAN.md  04-02-SUMMARY.md  04-CONTEXT.md  04-RESEARCH.md  04-VERIFICATION.md
.planning/phases/04-layer-entities/: 04-01-PLAN.md  04-01-SUMMARY.md  04-02-PLAN.md  04-02-SUMMARY.md  04-CONTEXT.md  04-RESEARCH.md  04-VERIFICATION.md
.planning/phases/05-frame-pipeline/: 05-01-PLAN.md  05-01-SUMMARY.md  05-02-PLAN.md  05-02-SUMMARY.md  05-CONTEXT.md  05-RESEARCH.md  05-VERIFICATION.md
.planning/phases/05-integration-and-migration/: 05-01-PLAN.md  05-01-SUMMARY.md  05-02-PLAN.md  05-02-SUMMARY.md  05-CONTEXT.md  05-RESEARCH.md  05-VERIFICATION.md
.planning/phases/06-mouse-input/: 06-01-PLAN.md  06-01-SUMMARY.md  06-02-PLAN.md  06-02-SUMMARY.md  06-CONTEXT.md  06-RESEARCH.md  06-VERIFICATION.md
.planning/phases/07-true-color/: 07-01-PLAN.md  07-01-SUMMARY.md  07-02-PLAN.md  07-02-SUMMARY.md  07-RESEARCH.md  07-VERIFICATION.md
.planning/phases/08-sub-cell-rendering/: 08-01-PLAN.md  08-01-SUMMARY.md  08-02-PLAN.md  08-02-SUMMARY.md  08-03-PLAN.md  08-03-SUMMARY.md  08-CONTEXT.md  08-RESEARCH.md
.planning/research/: ARCHITECTURE.md  FEATURES.md  PITFALLS.md  STACK.md  SUMMARY.md
docs/: frame-pipeline.md  input.md  surfaces.md  windowing.md
examples/: draw_test.c  minimal.c  run_draw_test.sh  run_minimal.sh  run_space_invaders.sh
examples/space_invaders/: components.h  game.c  renderer.h
include/: cels_ncurses.h  cels_ncurses_draw.h
include/cels-ncurses/: backend.h  ncurses.h  tui_color.h  tui_components.h  tui_draw.h  tui_draw_context.h  tui_engine.h  tui_frame.h  tui_input.h  tui_internal.h  tui_layer.h  tui_ncurses.h  tui_renderer.h  tui_scissor.h  tui_subcell.h  tui_types.h  tui_widgets.h  tui_window.h
src/: ncurses_ecs_bridge.c  ncurses_ecs_bridge.h  ncurses_module.c  tui_engine.c  tui_internal.h  tui_window.h
src/frame/: tui_frame.c
src/graphics/: tui_color.c  tui_draw.c  tui_scissor.c  tui_subcell.c
src/input/: tui_input.c
src/layer/: tui_layer.c  tui_layer_entity.c  tui_layer_panel.c  tui_surface_panel.c
src/renderer/: tui_renderer.c
src/widgets/: tui_widgets.c
src/window/: tui_spawn.c  tui_window.c
